# RationalSystem

./: .gitignore  CMakeLists.txt  README.md
examples/: test_suite.cpp
src/: calculator_main.cpp  rational.cpp  rational.h  rational_arithmetic.cpp  rational_comparison.cpp  rational_converter.cpp  rational_io.cpp  rational_parser.cpp  rational_reducer.cpp
